--- a/design/ken/sliderpage/china.html
+++ b/design/ken/sliderpage/china.html
@@ -9,6 +9,21 @@
   </head>
   <body>
 
+    <!-- Navigation -->
+    <div class="b-nav">
+      <li><a class="b-link" href="" target="_blank">Globe</a></li>
+      <li><a class="b-link" href="" target="_blank">Profile</a></li>
+    </div>
+    
+    <!-- Burger-Icon -->
+    <div class="b-container">
+      <div class="b-menu">
+        <div class="b-bun b-bun--top"></div>
+        <div class="b-bun b-bun--mid"></div>
+        <div class="b-bun b-bun--bottom"></div>
+      </div>
+    </div>
+
     <div class="wrapper">
       <div class="card card--first">
         <div class="card__header card__header--first">
@@ -101,7 +116,13 @@
       <div class="cards-placeholder__item"></div>
       <div class="cards-placeholder__item"></div>
     </div>
+  <script
+    src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+    crossorigin="anonymous"></script>
   <script src="china/js/index.js"></script>
+  <script src="china/js/breakpoints.min.js"></script>
+  <script src="china/js/burger.js"></script>
 
 </body>
 </html>
