--- a/design/m/sliderpage/canada.html
+++ b/design/m/sliderpage/canada.html
@@ -32,8 +32,8 @@
 
           <span class="card__price card__will-animate">Question 1</span>
 
-          <h1 class="card__title card__will-animate">Give it a try!!!</h1>
-          <span class="card__subtitle card__will-animate">Something about pollution in here.</span>
+          <h1 class="card__title card__will-animate">Pollution</h1>
+          <span class="card__subtitle card__will-animate">Which of the following is not is a pollution source for the Great Lakes?</span>
 
         </div>
 
