--- a/design/m/sliderpage/canada.html
+++ b/design/m/sliderpage/canada.html
@@ -53,8 +53,8 @@
 
           <span class="card__price card__will-animate">Question 2</span>
 
-          <h1 class="card__title card__will-animate">Let's move forward! Advance!</h1>
-          <span class="card__subtitle card__will-animate">Something about the 3r's here</span>
+          <h1 class="card__title card__will-animate">The Three R's</h1>
+          <span class="card__subtitle card__will-animate">Which item belongs in a Torontonian blue bin?</span>
 
         </div>
 
@@ -74,14 +74,14 @@
 
           <span class="card__price card__will-animate">Question 3</span>
 
-          <h1 class="card__title card__will-animate">Almost there. Endurance helps us grow.</h1>
-          <span class="card__subtitle card__will-animate">Something about the Resource and Waste here.</span>
+          <h1 class="card__title card__will-animate">Resources & Waste</h1>
+          <span class="card__subtitle card__will-animate">The leader of this newly industrialized Southeast Asian country threatened to declare war on Canada over an illegal trash shipment sent to the capital of that country.</span>
 
         </div>
 
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
-          <div class="card__wish-list card__wish-list--solstice card__will-animate">Multiple Choice Section</div>
+          <div class="card__wish-list card__wish-list--quebec card__will-animate">Multiple Choice Section</div>
 
           <span class="card__category card__will-animate"></span>
         </div>
@@ -95,14 +95,14 @@
   
             <span class="card__price card__will-animate">Question 4</span>
   
-            <h1 class="card__title card__will-animate">Well done. You are on the last question!</h1>
-            <span class="card__subtitle card__will-animate">Something about the Ecosystem here.</span>
+            <h1 class="card__title card__will-animate">Ecosystem</h1>
+            <span class="card__subtitle card__will-animate">How many islands combined are in the Great Lakes?</span>
   
           </div>
   
           <div class="card__body">
             <div class="card__image card__will-animate"></div>
-            <div class="card__wish-list card__wish-list--solstice card__will-animate">Multiple Choice Section</div>
+            <div class="card__wish-list card__wish-list--huarache card__will-animate">Multiple Choice Section</div>
   
             <span class="card__category card__will-animate"></span>
           </div>
