colours for india and china; new folder for turkey

--- a/design/m/sliderpage/china.html
+++ b/design/m/sliderpage/china.html
@@ -81,7 +81,7 @@
 
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
-          <div class="card__wish-list card__wish-list--solstice card__will-animate">Multiple Choice Section</div>
+          <div class="card__wish-list card__wish-list--taiwan card__will-animate">Multiple Choice Section</div>
 
           <span class="card__category card__will-animate"></span>
         </div>
@@ -102,7 +102,7 @@
   
           <div class="card__body">
             <div class="card__image card__will-animate"></div>
-            <div class="card__wish-list card__wish-list--solstice card__will-animate">Multiple Choice Section</div>
+            <div class="card__wish-list card__wish-list--huarache card__will-animate">Multiple Choice Section</div>
   
             <span class="card__category card__will-animate"></span>
           </div>
