Globe Size modified and stopped scrolling

--- a/design/Dhruv/Globe/globe.html
+++ b/design/Dhruv/Globe/globe.html
@@ -24,8 +24,7 @@
     </div>
     <header><a href="#">Profile</a> </header>
     <script>
-        let globe = initGlobe();
-        //globe.onCountryPicked(callBack(globe));
+        initGlobe();
     </script>
 </body>
 </html>
