--- a/design/m/sliderpage/china.html
+++ b/design/m/sliderpage/china.html
@@ -32,8 +32,8 @@
 
           <span class="card__price card__will-animate">Question 1</span>
 
-          <h1 class="card__title card__will-animate">Give it a try!!!</h1>
-          <span class="card__subtitle card__will-animate">Something about pollution in here.</span>
+          <h1 class="card__title card__will-animate">Pollution</h1>
+          <span class="card__subtitle card__will-animate">Which Chinese city is home to the world's biggest air purifier?</span>
 
         </div>
 
@@ -53,8 +53,8 @@
 
           <span class="card__price card__will-animate">Question 2</span>
 
-          <h1 class="card__title card__will-animate">Let's move forward! Advance!</h1>
-          <span class="card__subtitle card__will-animate">Something about the 3r's here</span>
+          <h1 class="card__title card__will-animate">Ecosystem</h1>
+          <span class="card__subtitle card__will-animate">Fill in the blanks: China alone accounts for XX% of the global net increase in leaf area with only 6.6% of global vegetated area. </span>
 
         </div>
 
@@ -74,8 +74,8 @@
 
           <span class="card__price card__will-animate">Question 3</span>
 
-          <h1 class="card__title card__will-animate">Almost there. Endurance helps us grow.</h1>
-          <span class="card__subtitle card__will-animate">Something about the Resource and Waste here.</span>
+          <h1 class="card__title card__will-animate">Waste Management</h1>
+          <span class="card__subtitle card__will-animate">What recycling-related thing did China do that heavily influenced the behaviour of other developed countries?</span>
 
         </div>
 
@@ -95,8 +95,8 @@
   
             <span class="card__price card__will-animate">Question 4</span>
   
-            <h1 class="card__title card__will-animate">Well done. You are on the last question!</h1>
-            <span class="card__subtitle card__will-animate">Something about the Ecosystem here.</span>
+            <h1 class="card__title card__will-animate">3R's</h1>
+            <span class="card__subtitle card__will-animate">Which region in China has the most efficient recycling systems in the world?</span>
   
           </div>
   
