--- a/design/m/sliderpage/canada.html
+++ b/design/m/sliderpage/canada.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="canada/css/style.css">
     <link rel="stylesheet" href="canada/css/burger.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=0.7">
   </head>
   <body>
 
