--- a/design/m/sliderpage/turkey.html
+++ b/design/m/sliderpage/turkey.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Canada</title>
-    <link rel="stylesheet" href="canada/css/style.css">
-    <link rel="stylesheet" href="canada/css/burger.css">
+    <title>Turkey</title>
+    <link rel="stylesheet" href="turkey/css/style.css">
+    <link rel="stylesheet" href="turkey/css/burger.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600" rel="stylesheet">
   </head>
   <body>
@@ -120,9 +120,9 @@
     src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
     crossorigin="anonymous"></script>
-  <script src="canada/js/index.js"></script>
-  <script src="canada/js/breakpoints.min.js"></script>
-  <script src="canada/js/burger.js"></script>
+  <script src="turkey/js/index.js"></script>
+  <script src="turkey/js/breakpoints.min.js"></script>
+  <script src="turkey/js/burger.js"></script>
 
 </body>
 </html>
