--- a/design/Bisht/canada/canada.html
+++ b/design/Bisht/canada/canada.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>China</title>
-    <link rel="stylesheet" href="china/css/style.css">
-    <link rel="stylesheet" href="china/css/burger.css">
+    <title>Canada</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/burger.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600" rel="stylesheet">
-    <script src = "china/js/buttons.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=0.7">
   </head>
   <body>
 
@@ -33,16 +33,14 @@
 
           <span class="card__price card__will-animate">Question 1</span>
 
-          <h1 class="card__title card__will-animate">Why is Taj-Mahal turning yellow?</h1>
-          <span class="card__subtitle card__will-animate">Something about pollution in here.</span>
+          <h1 class="card__title card__will-animate">Pollution</h1>
+          <span class="card__subtitle card__will-animate">Which of the following is not is a pollution source for the Great Lakes?</span>
 
         </div>
 
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
-          <div class="card__wish-list card__wish-list--19 card__will-animate" id="button1">
-
-          </div>
+          <div class="card__wish-list card__wish-list--19 card__will-animate">Multiple Choice Section</div>
 
           <span class="card__category card__will-animate"></span>
         </div>
@@ -56,8 +54,8 @@
 
           <span class="card__price card__will-animate">Question 2</span>
 
-          <h1 class="card__title card__will-animate">Let's move forward! Advance!</h1>
-          <span class="card__subtitle card__will-animate">Something about the 3r's here</span>
+          <h1 class="card__title card__will-animate">The Three R's</h1>
+          <span class="card__subtitle card__will-animate">Which item belongs in a Torontonian blue bin?</span>
 
         </div>
 
@@ -77,14 +75,14 @@
 
           <span class="card__price card__will-animate">Question 3</span>
 
-          <h1 class="card__title card__will-animate">Almost there. Endurance helps us grow.</h1>
-          <span class="card__subtitle card__will-animate">Something about the Resource and Waste here.</span>
+          <h1 class="card__title card__will-animate">Resources & Waste</h1>
+          <span class="card__subtitle card__will-animate">The leader of this newly industrialized Southeast Asian country threatened to declare war on Canada over an illegal trash shipment sent to the capital of that country.</span>
 
         </div>
 
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
-          <div class="card__wish-list card__wish-list--solstice card__will-animate">Multiple Choice Section</div>
+          <div class="card__wish-list card__wish-list--quebec card__will-animate">Multiple Choice Section</div>
 
           <span class="card__category card__will-animate"></span>
         </div>
@@ -98,14 +96,14 @@
   
             <span class="card__price card__will-animate">Question 4</span>
   
-            <h1 class="card__title card__will-animate">Well done. You are on the last question!</h1>
-            <span class="card__subtitle card__will-animate">Something about the Ecosystem here.</span>
+            <h1 class="card__title card__will-animate">Ecosystem</h1>
+            <span class="card__subtitle card__will-animate">How many islands combined are in the Great Lakes?</span>
   
           </div>
   
           <div class="card__body">
             <div class="card__image card__will-animate"></div>
-            <div class="card__wish-list card__wish-list--solstice card__will-animate">Multiple Choice Section</div>
+            <div class="card__wish-list card__wish-list--huarache card__will-animate">Multiple Choice Section</div>
   
             <span class="card__category card__will-animate"></span>
           </div>
@@ -123,9 +121,9 @@
     src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
     crossorigin="anonymous"></script>
-  <script src="china/js/index.js"></script>
-  <script src="china/js/breakpoints.min.js"></script>
-  <script src="china/js/burger.js"></script>
+  <script src="js/index.js"></script>
+  <script src="js/breakpoints.min.js"></script>
+  <script src="js/burger.js"></script>
 
 </body>
 </html>
