quiz started with the template

--- a/design/Bisht/canada/canada.html
+++ b/design/Bisht/canada/canada.html
@@ -40,8 +40,10 @@
 
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
-          <div class="card__wish-list card__wish-list--19 card__will-animate">Multiple Choice Section</div>
-
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button id="1A">Volcanic Mountains</button></div>
+        <div class="card__wish-list card__wish-list--19 card__will-animate"><button id="1B"> Dumping</button></div>
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button id="1C"> Pollution from factories</button></div>
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button id="1D"> Other</button></div>
           <span class="card__category card__will-animate"></span>
         </div>
       </div>
@@ -110,6 +112,10 @@
         </div>
 
     </div> <!-- /wrapper -->
+
+    <div id="explanation" style="display: none">
+      <div id="A_explain">This is the explanation for question 1.</div>
+    </div>
 
     <div class="cards-placeholder">
       <div class="cards-placeholder__item"></div>
