--- a/design/Bisht/quiz/index.html
+++ b/design/Bisht/quiz/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
 <div id="container">
+
     <div id="start">
         Start Quiz!
     </div>
+
     <div id="quiz" style="display: none">
         <div id="question"></div>
         <div id="qimg"></div>
@@ -19,14 +21,25 @@
             <div class="choice" id="C" onclick="checkAnswer('C')"></div>
             <div class="choice" id="D" onclick="checkAnswer('D')"></div>
         </div>
+        <div id="submit_button">Submit</div>
         <div id="timer">
             <div id="counter"></div>
-            <div id="btimeGauge"></div>
+            <div id="bt imeGauge"></div>
             <div id="timeGauge"></div>
         </div>
         <div id="progress"></div>
+</div>
+
+    <div id="explanation_container">
+
+        <div id="nextQusButton">
+            Next Question
+        </div>
+
     </div>
+
     <div id="scoreContainer" style="display: none"></div>
+
 </div>
 <script src="assets/js/main.js"></script>
 </body>
