slider page working

--- a/design/Bisht/canada/canada.html
+++ b/design/Bisht/canada/canada.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Canada</title>
     <link rel="stylesheet" href="css/style.css">
+    <!---->
     <link rel="stylesheet" href="css/burger.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=0.7">
@@ -123,6 +124,9 @@
       <div class="cards-placeholder__item"></div>
       <div class="cards-placeholder__item"></div>
     </div>
+    <div id="newdiv">
+      Click me.
+    </div>
   <script
     src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
@@ -130,6 +134,8 @@
   <script src="js/index.js"></script>
   <script src="js/breakpoints.min.js"></script>
   <script src="js/burger.js"></script>
+    <script src="js/quiz.js"></script>
 
-</body>
+
+  </body>
 </html>
