all buttons functioning sliderpage

--- a/design/Bisht/canada/canada.html
+++ b/design/Bisht/canada/canada.html
@@ -41,10 +41,10 @@
 
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
-          <div class="card__wish-list card__wish-list--19 card__will-animate"><button id="1A">Volcanic Mountains</button></div>
-        <div class="card__wish-list card__wish-list--19 card__will-animate"><button id="1B"> Dumping</button></div>
-          <div class="card__wish-list card__wish-list--19 card__will-animate"><button id="1C"> Pollution from factories</button></div>
-          <div class="card__wish-list card__wish-list--19 card__will-animate"><button id="1D"> Other</button></div>
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button class="choices" id="1A">Volcanic Mountains</button></div>
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button class="choices" id="1B"> Dumping</button></div>
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button class="choices" id="1C"> Pollution from factories</button></div>
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button class="choices" id="1D"> Other</button></div>
           <span class="card__category card__will-animate"></span>
         </div>
       </div>
@@ -64,8 +64,10 @@
 
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
-          <div class="card__wish-list card__wish-list--solstice card__will-animate">Multiple Choice Section</div>
-
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button class="choices" id="2A">Volcanic Mountains</button></div>
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button class="choices" id="2B"> Dumping</button></div>
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button class="choices" id="2C"> Pollution from factories</button></div>
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button class="choices" id="2D"> Other</button></div>
           <span class="card__category card__will-animate"></span>
         </div>
       </div>
@@ -85,8 +87,10 @@
 
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
-          <div class="card__wish-list card__wish-list--quebec card__will-animate">Multiple Choice Section</div>
-
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button class="choices" id="3A">Volcanic Mountains</button></div>
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button class="choices" id="3B"> Dumping</button></div>
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button class="choices" id="3C"> Pollution from factories</button></div>
+          <div class="card__wish-list card__wish-list--19 card__will-animate"><button class="choices" id="3D"> Other</button></div>
           <span class="card__category card__will-animate"></span>
         </div>
       </div>
@@ -106,8 +110,10 @@
   
           <div class="card__body">
             <div class="card__image card__will-animate"></div>
-            <div class="card__wish-list card__wish-list--huarache card__will-animate">Multiple Choice Section</div>
-  
+            <div class="card__wish-list card__wish-list--19 card__will-animate"><buttonclass="choices" id="4A">Volcanic Mountains</button></div>
+            <div class="card__wish-list card__wish-list--19 card__will-animate"><buttonclass="choices" id="4B"> Dumping</button></div>
+            <div class="card__wish-list card__wish-list--19 card__will-animate"><button class="choices" id="4C"> Pollution from factories</button></div>
+            <div class="card__wish-list card__wish-list--19 card__will-animate"><buttonclass="choices" id="4D"> Other</button></div>
             <span class="card__category card__will-animate"></span>
           </div>
         </div>
