all buttons functioning sliderpage

--- a/design/Bisht/canada/canada.html
+++ b/design/Bisht/canada/canada.html
@@ -107,6 +107,8 @@
       </div>
 
       <div class="card card--fourth">
+        <div id="score_container"></div>
+        <div id="ques_body">
         <div id="answerContainer4" style="display: none"></div>
 
         <div class="card__header card__header--fourth">
@@ -114,7 +116,7 @@
   
             <div class="card__logo card__will-animate"></div>
   
-            <span class="card__price card__will-animate">Question 4</span>
+            <span class="card__price card__will-animate" id="check_score">Question 4</span>
   
             <h1 class="card__title card__will-animate" id="heading4">Ecosystem</h1>
             <span class="card__subtitle card__will-animate">How many islands combined are in the Great Lakes?</span>
@@ -131,6 +133,7 @@
             </div>
             <span class="card__category card__will-animate"></span>
           </div>
+        </div>
         </div>
 
     </div> <!-- /wrapper -->
