--- a/design/Bisht/canada/canada.html
+++ b/design/Bisht/canada/canada.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Canada</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <!---->
     <link rel="stylesheet" href="css/burger.css">
@@ -36,7 +37,7 @@
           <span class="card__price card__will-animate" >Question 1</span>
 
           <h1  id="heading1" class="card__title card__will-animate">Pollution</h1>
-          <span class="card__subtitle card__will-animate">Which of the following is not is a pollution source for the Great Lakes?</span>
+          <span class="card__subtitle card__will-animate" id="question-1">Which of the following is not is a pollution source for the Great Lakes?</span>
 
         </div>
 
