user testing works and quiz.js changed and canada.html also changed

--- a/design/Bisht/canada/canada.html
+++ b/design/Bisht/canada/canada.html
@@ -44,10 +44,10 @@
         <div class="card__body" id="first_card_body">
           <div class="card__image card__will-animate"></div>
           <div class="card__wish-list card__wish-list--19 card__will-animate" id="buttons1">
-          <div><button class="choices" id="1A">Volcanic Mountains</button></div>
-          <div><button class="choices" id="1B"> Dumping</button></div>
-          <div><button class="choices" id="1C"> Pollution from factories</button></div>
-          <div><button class="choices" id="1D"> Other</button></div>
+          <div><button class="choices" id="1A" onclick="validator1(checkAnswer1('A'))">Volcanic Mountains</button></div>
+          <div><button class="choices" id="1B" onclick="validator1(checkAnswer1('B'))"> Dumping</button></div>
+          <div><button class="choices" id="1C" onclick="validator1(checkAnswer1('C'))"> Pollution from factories</button></div>
+          <div><button class="choices" id="1D" onclick="validator1(checkAnswer1('D'))"> Other</button></div>
           </div>
             <span class="card__category card__will-animate"></span>
         </div>
@@ -71,10 +71,10 @@
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
           <div class="card__wish-list card__wish-list--19 card__will-animate" id="buttons2">
-            <div><button class="choices" id="2A">Volcanic Mountains</button></div>
-            <div><button class="choices" id="2B"> Dumping</button></div>
-            <div><button class="choices" id="2C"> Pollution from factories</button></div>
-            <div><button class="choices" id="2D"> Other</button></div>
+            <div><button class="choices" id="2A" onclick="validator2(checkAnswer2('A'))">Volcanic Mountains</button></div>
+            <div><button class="choices" id="2B" onclick="validator2(checkAnswer2('B'))"> Dumping</button></div>
+            <div><button class="choices" id="2C" onclick="validator2(checkAnswer2('C'))"> Pollution from factories</button></div>
+            <div><button class="choices" id="2D" onclick="validator2(checkAnswer2('D'))"> Other</button></div>
           </div>
           <span class="card__category card__will-animate"></span>
         </div>
@@ -98,10 +98,10 @@
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
           <div class="card__wish-list card__wish-list--19 card__will-animate" id="buttons3">
-            <div><button class="choices" id="3A">Volcanic Mountains</button></div>
-            <div><button class="choices" id="3B"> Dumping</button></div>
-            <div><button class="choices" id="3C"> Pollution from factories</button></div>
-            <div><button class="choices" id="3D"> Other</button></div>
+            <div><button class="choices" id="3A" onclick="validator3(checkAnswer3('A'))">Volcanic Mountains</button></div>
+            <div><button class="choices" id="3B" onclick="validator3(checkAnswer3('B'))"> Dumping</button></div>
+            <div><button class="choices" id="3C" onclick="validator3(checkAnswer3('C'))"> Pollution from factories</button></div>
+            <div><button class="choices" id="3D" onclick="validator3(checkAnswer3('D'))"> Other</button></div>
           </div>
           <span class="card__category card__will-animate"></span>
         </div>
@@ -127,10 +127,10 @@
           <div class="card__body">
             <div class="card__image card__will-animate"></div>
             <div class="card__wish-list card__wish-list--19 card__will-animate" id="buttons4">
-              <div><button class="choices" id="4A">Volcanic Mountains</button></div>
-              <div><button class="choices" id="4B"> Dumping</button></div>
-              <div><button class="choices" id="4C"> Pollution from factories</button></div>
-              <div><button class="choices" id="4D"> Other</button></div>
+              <div><button class="choices" id="4A" onclick="validator4(checkAnswer4('A'))">Volcanic Mountains</button></div>
+              <div><button class="choices" id="4B" onclick="validator4(checkAnswer4('B'))"> Dumping</button></div>
+              <div><button class="choices" id="4C" onclick="validator4(checkAnswer4('C'))"> Pollution from factories</button></div>
+              <div><button class="choices" id="4D" onclick="validator4(checkAnswer4('D'))"> Other</button></div>
             </div>
             <span class="card__category card__will-animate"></span>
           </div>
