--- a/design/Bisht/canada/canada.html
+++ b/design/Bisht/canada/canada.html
@@ -13,7 +13,7 @@
 
     <!-- Navigation -->
     <div class="b-nav">
-      <li><a class="b-link" href="" target="_blank">Globe</a></li>
+      <li><a class="b-link" href="" target="_blank" onclick="">Globe</a></li>
       <li><a class="b-link" href="" target="_blank">Profile</a></li>
     </div>
     
